--- a/package.json
+++ b/package.json
@@ -8,36 +8,38 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
+    "@aurelia/router": "latest",
     "aurelia": "latest",
-    "@aurelia/router": "latest"
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "eslint": "^8.43.0",
     "@aurelia/testing": "latest",
-    "htmlhint": "^1.1.4",
-    "stylelint": "^15.11.0",
-    "stylelint-config-standard-scss": "^11.1.0",
-    "rimraf": "^5.0.1",
-    "webpack": "^5.88.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "html-webpack-plugin": "^5.5.3",
-    "webpack-bundle-analyzer": "^4.9.0",
-    "style-loader": "^3.3.3",
+    "@aurelia/webpack-loader": "latest",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "autoprefixer": "^10.4.14",
     "css-loader": "^6.8.1",
     "dotenv-webpack": "^8.0.1",
-    "@aurelia/webpack-loader": "latest",
-    "ts-loader": "^9.4.4",
-    "sass-loader": "^13.3.2",
-    "sass": "^1.63.6",
-    "postcss-loader": "^7.3.3",
+    "eslint": "^8.43.0",
+    "html-webpack-plugin": "^5.5.3",
+    "htmlhint": "^1.1.4",
     "postcss": "^8.4.24",
-    "autoprefixer": "^10.4.14",
-    "@types/node": "^18.11.18",
-    "typescript": "^5.1.6",
+    "postcss-loader": "^7.3.3",
+    "rimraf": "^5.0.1",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard-scss": "^11.1.0",
+    "ts-loader": "^9.4.4",
     "tslib": "^2.6.0",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1"
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.1",
+    "webpack-bundle-analyzer": "^4.9.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
     "lint:js": "eslint src --ext .js,.ts",
