--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scifi-ui",
+  "name": "traffic-sim",
   "description": "An Aurelia 2 client application.",
   "version": "0.1.0",
   "repository": {
