--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "???"
   },
-  "license": "UNLICENSED",
+  "license": "MIT",
   "dependencies": {
     "@aurelia/router": "latest",
     "aurelia": "latest",
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@aurelia/testing": "latest",
     "@aurelia/webpack-loader": "latest",
+    "@types/jest": "^29.5.12",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
@@ -25,6 +26,7 @@
     "eslint": "^8.43.0",
     "html-webpack-plugin": "^5.5.3",
     "htmlhint": "^1.1.4",
+    "jest": "^29.7.0",
     "postcss": "^8.4.24",
     "postcss-loader": "^7.3.3",
     "rimraf": "^5.0.1",
@@ -33,6 +35,7 @@
     "style-loader": "^3.3.3",
     "stylelint": "^15.11.0",
     "stylelint-config-standard-scss": "^11.1.0",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.4.4",
     "tslib": "^2.6.0",
     "typescript": "^5.1.6",
