--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "dependencies": {
     "@aurelia/router": "latest",
     "aurelia": "latest",
-    "lodash-es": "^4.17.21"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@aurelia/testing": "latest",
     "@aurelia/webpack-loader": "latest",
     "@types/jest": "^29.5.12",
-    "@types/lodash-es": "^4.17.12",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
