--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "html-webpack-plugin": "^5.5.3",
     "htmlhint": "^1.1.4",
     "jest": "^29.7.0",
+    "jsdom-worker": "^0.3.0",
     "postcss": "^8.4.24",
     "postcss-loader": "^7.3.3",
     "rimraf": "^5.0.1",
